--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,8 @@ jobs:
     strategy:
       matrix:
         target:
-          - x86_64-unknown-linux-gnu
-          - x86_64-unknown-linux-musl
+          #- x86_64-unknown-linux-gnu
+          #- x86_64-unknown-linux-musl
           - arm-unknown-linux-musleabihf
 
     name: ${{ matrix.target }}
