--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        run: |
+          echo "startWith($${{ matrix.target }}, 'x86')"
 
       - name: Setup
         uses: actions-rs/toolchain@v1
@@ -31,7 +33,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: build
-          use-cross: $${{ startWith($${{ matrix.target }}, 'x86') }}
+          use-cross: startWith($${{ matrix.target }}, 'x86')
           args: --verbose --release --locked --target=${{ matrix.target }}
 
       - name: Package
