--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: build
-          use-cross: $${{ true }}
+          use-cross: true
           args: --verbose --release --locked --target=${{ matrix.target }}
 
       - name: Package
